# JARVIS

./: .gitignore  ACKNOWLEDGMENTS.md  LICENSE  README.md  RELEASE_NOTES_2026-03-19.md  SECURITY.md  SECURITY_AUDIT_2026-04-06.md
alliance_20260317_130542/: .gitignore  AGENTS.md  README.md  pyproject.toml
alliance_20260317_130542/docs/: AUDIT_REPORT_20260318.md  BETA_1_CHECKLIST.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES_BETA_1.md  NEXT_ITERATION_UI_VOICE.md  NEXT_TASKS.md  RELEASE_NOTES_BETA_1.md
alliance_20260317_130542/macos/JarvisMenuBar/: Makefile  Package.swift
alliance_20260317_130542/scripts/: collect_voice_samples.py  collect_wake_word_samples.py  finetune_tts.py  train_wake_word.py
alliance_20260317_130542/sql/: schema.sql
alliance_20260317_130542/src/jarvis/: __main__.py  identifier_restoration.py  mcp_server.py  query_normalization.py  runtime_paths.py  spoken_response_prefetch.py  transcript_repair.py  web_api.py
alliance_20260317_130542/tests/acceptance/: test_menu_acceptance_regression_cli.py  test_menu_acceptance_regression_fixture.py  test_regression_runner.py
alliance_20260317_130542/tests/contracts/: test_architecture_fitness.py  test_errors.py  test_models.py  test_protocols.py  test_states.py
alliance_20260317_130542/tests/e2e/: test_orchestrator_integration.py  test_smoke.py  test_voice_mode.py
alliance_20260317_130542/tests/fixtures/: eval_queries.json  menu_acceptance_regression_v1.json  retrieval_regression_v1.json  voice_query_eval.json
alliance_20260317_130542/tests/indexing/: test_chunk_router.py  test_chunker.py  test_code_strategy.py  test_document_elements.py  test_embedding_backfill.py  test_file_watcher.py  test_hwp_structured.py  test_hwpx_structured.py  test_index_pipeline.py  test_integration.py  test_paragraph_strategy.py  test_parsers.py  test_parsers_structured.py  test_pdf_structured.py  test_table_strategy.py  test_tombstone.py
alliance_20260317_130542/tests/integration/: test_context_assembler_e2e.py  test_hybrid_search_real.py  test_learning_e2e.py  test_schema.py
alliance_20260317_130542/tests/perf/: test_benchmark.py
alliance_20260317_130542/tests/retrieval/: test_citation_verifier.py  test_evidence_builder.py  test_freshness.py  test_fts_index.py  test_identifier_restoration.py  test_parallel_search.py  test_query_decomposer.py  test_regression_runner.py  test_regression_runner_integration.py  test_reranker.py  test_retrieval_integration.py  test_retrieval_regression_cli.py  test_retrieval_regression_fixture.py  test_strategy.py  (+2 more)
alliance_20260317_130542/한글문서파일형식_revision1.1_20110124/: index.xhtml  styles.css
(+340 files in other folders)
