[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "jarvis"
version = "0.1.0"
description = "Local-first personal workspace AI agent for Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "kiwi-py>=0.18",
    "mlx>=0.22",
    "numpy>=1.26",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mlx.*", "kiwi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow",
    "e2e: end-to-end tests",
    "perf: performance tests",
    "integration: integration tests",
]
