[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "0.1.0b1"
description = "Local-first personal workspace AI agent for Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "kiwipiepy>=0.18",
    "lxml>=5.2",
    "mlx>=0.22",
    "mlx-lm",
    "numpy>=1.26",
    "watchdog>=4.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "sentence-transformers>=3.0",
    "lancedb>=0.8",
    "openpyxl>=3.1",
    "python-hwpx>=0.1",
    "psutil>=5.9",
    "pyhwp>=0.1b12",
    "olefile>=0.46",
    "six",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mlx.*", "kiwi.*", "pymupdf.*", "docx.*", "pptx.*", "openpyxl.*", "hwpx.*", "sentence_transformers.*", "lancedb.*", "torch.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow",
    "e2e: end-to-end tests",
    "perf: performance tests",
    "integration: integration tests",
]
